load("@com_google_protobuf//bazel:proto_library.bzl", "proto_library")
load("@rules_proto_grpc_java//:defs.bzl", "java_grpc_library", "java_proto_library")

package(default_visibility = ["//visibility:public"])

## Proto Libraries
proto_library(
    name = "commons_proto",
    srcs = ["commons.proto"],
)

proto_library(
    name = "transactions_proto",
    srcs = ["transactions.proto"],
    deps = [
        ":commons_proto",
        "@com_google_protobuf//:duration_proto",
        "@com_google_protobuf//:empty_proto",
        "@com_google_protobuf//:timestamp_proto",
    ],
)

# # Java
java_proto_library(
    name = "commons_java",
    protos = [":commons_proto"],
)

java_grpc_library(
    name = "transactions_java",
    protos = [
        ":commons_proto",
        ":transactions_proto",
    ],
)
